@startuml GUI
hide empty members
skinparam linetype ortho

class Launcher {
    + main(args : String[]) : void
}

class MapsAroundYouGuiApp {
    + start(stage : Stage) : void
}

class ApplicationFactory {
    + createGuiSearchService() : GuiSearchService {static}
}

class DefaultGuiSearchService {
    + getSupportedDestinations() : List<Destination>
    + getDatasetMetadata() : DatasetMetadata
    + search(request : SearchRequest) : SearchResponse
    + getListingDetails(listingId : String) : ListingDetails
    + getCurrentPreferences() : UserPreferences
}

class UiSettingsStore
class GuiTaskRunner
class GuiErrorTranslator
class GuiSearchRequestParser
class GuiTextFormatter
class SearchRow

' App-layer collaborators
interface GuiSearchService
class SearchRequest
class SearchResponse
class ListingDetails
class DatasetMetadata
class UserPreferences
class Destination

' Entry and primary app class
Launcher "1" --> "1" MapsAroundYouGuiApp : launches >
MapsAroundYouGuiApp "1" --> "1" ApplicationFactory : creates service >
ApplicationFactory "1" --> "1" DefaultGuiSearchService : wires >
DefaultGuiSearchService ..|> GuiSearchService

' GUI ↔ app-layer interactions
MapsAroundYouGuiApp "1" --> "1" GuiSearchService : uses >
MapsAroundYouGuiApp "1" --> "0..*" SearchRequest : builds >
MapsAroundYouGuiApp "1" --> "0..*" SearchResponse : consumes >
MapsAroundYouGuiApp "1" --> "1" UiSettingsStore : persists UI prefs >
MapsAroundYouGuiApp "1" --> "1" GuiTaskRunner : runs background tasks >
MapsAroundYouGuiApp "1" --> "1" GuiErrorTranslator : maps errors >
MapsAroundYouGuiApp "1" --> "1" GuiSearchRequestParser : parses search input >
MapsAroundYouGuiApp "1" --> "1" GuiTextFormatter : formats labels >
MapsAroundYouGuiApp "1" --> "*" SearchRow : wraps domain results >

GuiSearchService "1" --> "0..*" SearchRequest
GuiSearchService "1" --> "0..*" SearchResponse
GuiSearchService "1" --> "*" Destination
GuiSearchService "1" --> "1" DatasetMetadata
GuiSearchService "1" --> "0..*" ListingDetails
GuiSearchService "1" --> "1" UserPreferences

@enduml